--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="src/css/style.css">
 </head>
 
 <body>
   <div class="form">
-    <label for="">Temperatura ( ºF / ºC / K )</label>
+    <label for="" id="temp">Temperatura ( ºF / ºC / K )</label>
     <input id="temperatura" type="number" placeholder="Digite a temperatura">
     <button id="calcular">Calcular</button>
     <div class="containerOpcoes">
